--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "landing page for the Alzagro team",
   "main": "main.js",
   "scripts": {
-    "start": "parcel index.html",
+    "start": "http-server .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -17,7 +17,7 @@
     "url": "https://github.com/globea/alzagro-landing/issues"
   },
   "homepage": "https://github.com/globea/alzagro-landing#readme",
-  "dependencies": {
-    "parcel": "^1.12.3"
+  "devDependencies": {
+    "http-server": "^0.11.1"
   }
 }
